--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1"
-  },
   "name": "cruisecontrol",
   "version": "1.0.0",
+  "description": "A bar crawl tracking application for cruise ships",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["cruise", "bar crawl", "tracking"],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "nodemon": "^3.0.3"
+  }
 }
