--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "cruisecontrol",
   "version": "1.0.0",
-  "description": "A bar crawl tracking application for cruise ships",
+  "description": "No-password, Tailwind-styled, SQLite-backed bar crawl tracker for cruise ships",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js",
+    "manage": "node manage.js"
   },
-  "keywords": ["cruise", "bar crawl", "tracking"],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "nodemon": "^3.0.3"
-  }
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "sqlite3": "^5.1.6"
+  },
+  "keywords": ["cruise", "bar", "crawl", "tracker", "offline"],
+  "author": "",
+  "license": "MIT"
 }
