--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "manage": "node manage.js"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/stack": "^7.4.2",
-    "bonjour-service": "^1.3.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "sqlite3": "^5.1.6"
+    "express-session": "^1.17.3"
   },
   "keywords": [
     "cruise",
