--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "manage": "node manage.js"
+    "manage": "node manage.js",
+    "build:css": "npx tailwindcss -i ./input.css -o ./public/tailwind.css --minify"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,5 +21,9 @@
     "offline"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11"
+  }
 }
