--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:css": "npx tailwindcss -i ./input.css -o ./public/tailwind.css --minify"
   },
   "dependencies": {
+    "compression": "^1.8.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
   },
